--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   
-  "homepage": "https://chiemekaanunkor.github.io/real-time-chap",
+  "homepage": "http://chiemekaanunkor.github.io/real-time-chap",
   "name": "chat_app",
   "version": "0.1.0",
   "private": true,
